[package]
name = "pixeldetector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24.8"
ndarray = "0.15.6"
num-integer = "0.1.46"
nshare = { version = "0.9.0", features = ["ndarray"] }
ordered-float = "4.2.0"
not_empty = { version = "0.1.3", features = [] }
alg-quickselect = { path = "../alg-quickselect" }
# clap = "4.5.4"
